--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
   "license": "ISC",
   "type": "CommonJS",
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.15",
+    "@arcjet/node": "^1.0.0-beta.15",
+    "@huggingface/inference": "^4.13.5",
     "@prisma/client": "^7.2.0",
     "arcjet": "^1.0.0-beta.15",
     "bcrypt": "^6.0.0",
@@ -21,12 +24,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "jest": "^30.2.0",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.2",
     "nodemon": "^3.1.11",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "winston": "^3.19.0",
     "zod": "^4.2.1"
   },
@@ -37,6 +42,8 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.17",
     "prisma": "^7.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
